# ombm

./: .clinerules.md  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.cursor/rules/: architecture-overview.mdc  plan.mdc  project-overview.mdc  working-rules.mdc
.github/workflows/: ci.yml
docs/: design.md  plan.md  prd.md  quickstart.md  techstack.md  test_plan.md
ombm/: __init__.py  __main__.py  bookmark_adapter.py  cache.py  config.py  controller.py  keychain.py  llm.py  logging.py  models.py  persistence.py  pipeline.py  renderer.py  scraper.py  tree_builder.py
ombm/applescript/: create_folder.applescript.j2  export_bookmarks.applescript.j2  move_bookmark.applescript.j2
ombm/prompts/: taxonomy.jinja  title_desc.jinja
tests/: __init__.py  test_bookmark_adapter.py  test_cache.py  test_config.py  test_controller.py  test_keychain.py  test_llm.py  test_logging.py  test_main.py  test_persistence.py  test_pipeline.py  test_renderer.py  test_scraper.py  test_tree_builder.py
